--- a/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/Base.lproj/Localizable.strings
+++ b/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/Base.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "com.kustomer.Reconnecting..." = "Reconnecting...";
 "com.kustomer.Report problem" = "Report problem";
 "com.kustomer.Report sent" = "Report sent";
-"com.kustomer.Search Knowledge Base" = "Search Knowledge Base";
+"com.kustomer.Search Help Articles" = "Search Help Articles";
 "com.kustomer.Sending" = "Sending";
 "com.kustomer.Share" = "Share";
 "com.kustomer.Take photo" = "Take photo";
