--- a/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/af.lproj/Localizable.strings
+++ b/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/af.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "com.kustomer.Reconnecting..." = "Koppel tans weer…";
 "com.kustomer.Report problem" = "Meld probleem aan";
 "com.kustomer.Report sent" = "Verslag gestuur";
-"com.kustomer.Search Knowledge Base" = "Soek in kennisbasis";
+"com.kustomer.Search Help Articles" = "Soek in kennisbasis";
 "com.kustomer.Sending" = "Stuur";
 "com.kustomer.Share" = "Deel";
 "com.kustomer.Take photo" = "Neem &#39;n foto";
