--- a/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/sl.lproj/Localizable.strings
+++ b/KustomerChat.xcframework/ios-arm64_x86_64-simulator/KustomerChat.framework/Strings.bundle/sl.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "com.kustomer.Reconnecting..." = "Vnovična povezava ...";
 "com.kustomer.Report problem" = "Prijavi težavo";
 "com.kustomer.Report sent" = "Poročilo poslano";
-"com.kustomer.Search Knowledge Base" = "Poiščite bazo znanja";
+"com.kustomer.Search Help Articles" = "Poiščite bazo znanja";
 "com.kustomer.Sending" = "Pošiljanje";
 "com.kustomer.Share" = "Deliti";
 "com.kustomer.Take photo" = "Fotografiraj";
