--- a/KustomerChat.xcframework/ios-arm64/KustomerChat.framework/Strings.bundle/fr.lproj/Localizable.strings
+++ b/KustomerChat.xcframework/ios-arm64/KustomerChat.framework/Strings.bundle/fr.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "com.kustomer.Can't load chat" = "Impossible de charger le chat";
 "com.kustomer.Cancel" = "Annuler";
 "com.kustomer.Cancelled! Tap to retry." = "Annulé! Cliquer pour réessayer.";
-"com.kustomer.Chat" = "Discuter";
+"com.kustomer.Chat" = "Chat";
 "com.kustomer.Chat has ended" = "Le chat est terminé";
 "com.kustomer.Chat history" = "Historique des discussions";
 "com.kustomer.Chat is currently unavailable" = "Le chat est actuellement indisponible";
