--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,1 @@
-See https://kustomer-enterprise-group.readme.io/kustomer/changelog
+See changelogs here: https://developer.kustomer.com/chat-sdk/v2-iOS/changelog/ios
