--- a/KustomerChat.xcframework/ios-arm64/KustomerChat.framework/Strings.bundle/tr.lproj/Localizable.strings
+++ b/KustomerChat.xcframework/ios-arm64/KustomerChat.framework/Strings.bundle/tr.lproj/Localizable.strings
@@ -72,7 +72,7 @@
 "com.kustomer.Search Results" = "Arama Sonuçları";
 "com.kustomer.Sending" = "gönderme";
 "com.kustomer.Share" = "Paylaş";
-"com.kustomer.Submit" = "Göndermek";
+"com.kustomer.Submit" = "Gönder";
 "com.kustomer.Survey" = "Anket";
 "com.kustomer.Take photo" = "Fotoğraf çek";
 "com.kustomer.Tap to load..." = "Yüklemek için dokunun...";
